fixed searh styling on tablets

--- a/app/assets/stylesheets/search.less
+++ b/app/assets/stylesheets/search.less
@@ -35,6 +35,7 @@
     color: #111;
     cursor: pointer;
     font-weight: 500;
+    text-align: left;
     font-size: 13px;
     padding: 5px 12px;
     text-decoration: none;
@@ -70,6 +71,7 @@
 
  #soulmate .soulmate-type {
     letter-spacing: 0.5px;
+    text-align: left;
     padding: 10px 10px 0 10px;
     text-transform: capitalize;
     zoom: 1;
